# finally

./: .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  market_data_demo.py
.claude/: settings.json
.claude/agents/: change-reviewer.md
backend/: main.py  pyproject.toml
backend/db/: __init__.py  connection.py  crud.py  schema.py
backend/llm/: __init__.py  client.py  mock.py  models.py  prompt.py  service.py
backend/market/: __init__.py  cache.py  massive.py  provider.py  simulator.py  tickers.py
backend/routes/: __init__.py  chat.py  health.py  portfolio.py  stream.py  watchlist.py
backend/tests/api/: conftest.py  test_health.py  test_portfolio.py  test_stream.py  test_watchlist.py
backend/tests/db/: conftest.py  test_crud.py  test_schema.py
backend/tests/llm/: conftest.py  test_mock.py  test_models.py  test_prompt.py  test_service.py
backend/tests/market/: test_cache.py  test_massive.py  test_provider.py  test_simulator.py
frontend/: jest.config.ts  package-lock.json  package.json
planning/: MARKET_DATA_DESIGN.md  MARKET_DATA_REVIEW.md  MARKET_DATA_SUMMARY.md  MARKET_INTERFACE.md  MARKET_SIMULATOR.md  MASSIVE_API.md  PLAN.md  market_data_demo.py
scripts/: start_mac.sh  start_windows.ps1  stop_mac.sh  stop_windows.ps1
test/: package-lock.json  package.json  playwright.config.ts  tsconfig.json
test/e2e/: 00-health.spec.ts  01-fresh-start.spec.ts  02-watchlist.spec.ts  03-buy-shares.spec.ts  04-sell-shares.spec.ts  05-portfolio.spec.ts  06-chat.spec.ts  07-sse.spec.ts  fixtures.ts
test/playwright-report/: index.html
(+21 files in other folders)
